@@ -1,6 +1,6 @@
-MD5 bd7bf3f422fb32f7584a0d22ce8f5ba4 ChangeLog 2383
-MD5 4082a738949e7768698fd6266899876f jpeg-6b-r2.ebuild 785
-MD5 abe3430c15d122be238421cd318bf22d jpeg-6b-r3.ebuild 1261
+MD5 98df81328e40bc954413ab95a97c8bfb ChangeLog 2511
+MD5 cbd568498197eff5756209dcf8450e30 jpeg-6b-r2.ebuild 785
+MD5 1a464271f3662ca2c2e095be9d1a7cd2 jpeg-6b-r3.ebuild 1263
 MD5 3637cbaea842b04f1aa4693a1f68e286 metadata.xml 224
 MD5 232dd13c6edffa89c6ccd5f911bbac64 files/digest-jpeg-6b-r2 63
-MD5 353fa0ec455197081c5e8462f4e055d9 files/digest-jpeg-6b-r3 124
+MD5 232dd13c6edffa89c6ccd5f911bbac64 files/digest-jpeg-6b-r3 63
