@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/jpeg/Attic/jpeg-6b-r2.ebuild,v 1.11 2003/02/13 12:46:08 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/jpeg/Attic/jpeg-6b-r2.ebuild,v 1.12 2004/02/17 10:14:07 kumba Exp $
 
 MY_P=${PN}src.v${PV}
 S=${WORKDIR}/${P}
